--- a/CollegeLevelCounselling_project/collegeLevelCounselling/src/main/resources/application.properties
+++ b/CollegeLevelCounselling_project/collegeLevelCounselling/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
 
