--- a/E-commerce_Backend/requirements.txt
+++ b/E-commerce_Backend/requirements.txt
@@ -1,15 +1,25 @@
 annotated-types==0.7.0
 anyio==4.9.0
+bcrypt==4.3.0
 click==8.2.1
 databases==0.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
+passlib==1.7.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.5
+pydantic-settings==2.10.1
 pydantic_core==2.33.2
 python-dotenv==1.1.0
+python-jose==3.5.0
 python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
